--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <button>Add name</button>
     <ul id="names"></ul>
-    <script src="app.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
